<resources>
    <string name="app_name">Card Flip Animation</string>
    <string name="object_animator">Object Animator</string>
    <string name="dynamic_animation">Dynamic Animation</string>
    <string name="card_flip">Card Flip Animation</string>
    <string name="zoom_animation">Zoom Animation</string>
    <string name="auto_animate">Auto Animate</string>
    <string name="layout_changes">Animate Layout Changes</string>
    <string name="shared_animation">Shared Animation</string>

</resources>